# dynoxide

./: .dockerignore  .editorconfig  .gitignore  .kos  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  SECURITY.md  SUPPORT.md  deny.toml  glama.json  package-lock.json  package.json  playwright.config.js  server.json  smithery.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rfc.yml
.github/workflows/: benchmark-comparative.yml  benchmark-refresh.yml  benchmark-regression.yml  ci.yml  docker.yml  homebrew.yml  mcp.yml  npm.yml  publish-crate.yml  release-pipeline.yml  release-preflight.yml  release.yml  test-build.yml
action/: action.yml
benchmarks/: .gitignore  Cargo.toml  README.md
benchmarks/benches/: embedded_file_backed.rs  embedded_macro.rs  embedded_micro.rs  http_macro.rs  iai_core.rs
benchmarks/scripts/: append_history.py  collect_system_info.sh  generate_report.py  run_local_benchmarks.sh  start_dynamodb_local.sh  start_localstack.sh  update_readme_benchmarks.py
benchmarks/src/: lib.rs  memory_measurement.rs
docs/: README.md  RELEASING.md  compatibility-matrix.md  compatibility-summary.md  conformance-remaining-gap.md  correctness-audit.md  dynalite-conformance-report.md  gaps.md  http-server.md  import.md  installation.md  library.md  mcp-registries.md  mcp.md  streams.md  wasm.md
docs/adr/: 0000-template.md  README.md
docs/rfcs/: 0000-template.md  README.md
harness/: engine-harness.html  index.html
js/: dynoxide-worker.d.ts  dynoxide-worker.js  engine-client.d.ts  engine-client.js  engine-client.test.js  fnv1a.js  fnv1a.test.js  sqlite-wasm-bridge.js  sqlite-wasm-bridge.test.js  wa-sqlite-bridge.js  wasm-http-bridge.mjs
js/test-support/: static-server.mjs  stub-worker.js
mcpb/: manifest.json
npm/dynoxide/: README.md  package.json
npm/dynoxide-engine/: README.md  package.json
npm/scripts/: publish.sh
npm/wasm-engine/: README.md  package.json
runs/2026-03-24-a536efc/: ci_pipeline.json  ci_ratios.json  criterion_baseline.json  dynamodb_local.json  dynoxide_http.json  memory_profile.csv  run_summary.json  startup.json  system_info.json
runs/2026-04-02-ec7253a/: ci_pipeline.json  ci_ratios.json  criterion_baseline.json  dynamodb_local.json  dynoxide_http.json  memory_profile.csv  run_summary.json  startup.json  system_info.json
runs/2026-04-02-ef4fdc8/: ci_pipeline.json  ci_ratios.json  criterion_baseline.json  dynamodb_local.json  dynoxide_http.json  memory_profile.csv  run_summary.json  startup.json  system_info.json
runs/2026-04-24-aefc68a/: ci_pipeline.json  ci_ratios.json  criterion_baseline.json  dynamodb_local.json  dynoxide_http.json  memory_profile.csv  run_summary.json  startup.json  system_info.json
runs/2026-04-27-f5052db/: ci_pipeline.json  ci_ratios.json  criterion_baseline.json  dynamodb_local.json  dynoxide_http.json  memory_profile.csv  run_summary.json  startup.json  system_info.json
runs/2026-06-20-128d5f4/: ci_pipeline.json  ci_ratios.json  criterion_baseline.json  dynamodb_local.json  dynoxide_http.json  memory_profile.csv  run_summary.json  startup.json  system_info.json
runs/2026-06-24-36a7a8d/: ci_pipeline.json  ci_ratios.json  criterion_baseline.json  dynamodb_local.json  dynoxide_http.json  memory_profile.csv  run_summary.json  startup.json  system_info.json
runs/2026-06-26-e066fc0/: ci_pipeline.json  ci_ratios.json  criterion_baseline.json  dynamodb_local.json  dynoxide_http.json  memory_profile.csv  run_summary.json  startup.json  system_info.json
runs/2026-07-05-7d5fd8a/: ci_pipeline.json  ci_ratios.json  criterion_baseline.json  dynamodb_local.json  dynoxide_http.json  memory_profile.csv  run_summary.json  startup.json  system_info.json
scripts/: build-wasm.sh  check-contract-version.sh  extract-changelog.sh  strip-attribution.sh
src/: auth_material.rs  dynamo_ops.rs  errors.rs  lib.rs  macros.rs  main.rs  serde_errors.rs  server.rs  snapshots.rs  storage.rs  streams.rs  ttl.rs  types.rs  validation.rs  wasm_api.rs  wasm_harness.rs
src/actions/: batch_execute_statement.rs  batch_get_item.rs  batch_write_item.rs  create_table.rs  delete_item.rs  delete_table.rs  describe_stream.rs  describe_table.rs  describe_time_to_live.rs  execute_statement.rs  execute_transaction.rs  get_item.rs  get_records.rs  get_shard_iterator.rs  gsi.rs  helpers.rs  import_items.rs  list_streams.rs  list_tables.rs  list_tags_of_resource.rs  lsi.rs  mod.rs  put_item.rs  query.rs  scan.rs  tag_resource.rs  transact_get_items.rs  transact_write_items.rs  untag_resource.rs  update_item.rs  update_table.rs  update_time_to_live.rs
src/expressions/: condition.rs  key_condition.rs  mod.rs  projection.rs  reserved.rs  tokenizer.rs  update.rs
src/import/: anonymise.rs  config.rs  consistency.rs  mod.rs  parser.rs  schema.rs
src/mcp/: auth.rs  errors.rs  mod.rs  server.rs
src/partiql/: executor.rs  mod.rs  parser.rs
src/schema/: mod.rs  onetable.rs
src/server/: auth.rs  mod.rs
src/storage_backend/: clock.rs  error.rs  mod.rs  rusqlite_impl.rs  sql_builders.rs  wasm_backend.rs  wasm_stub.rs
tests/: aws_sdk_integration.rs  backend_error.rs  batch_operations.rs  clock.rs  condition_check_failure.rs  consumed_capacity.rs  core_important_fixes.rs  correctness_fixes.rs  create_fixtures.rs  create_table_params.rs  empty_value_validation.rs  execute_transaction.rs  expressions.rs  fixture_compat.rs  foundation.rs  gsi.rs  healthcheck.rs  http_server.rs  import.rs  import_items.rs  index_key_validation.rs  introspection_and_snapshots.rs  item_collection_metrics.rs  item_macro.rs  item_operations.rs  lsi.rs  mcp_server.rs  nesting_depth.rs  number_validation.rs  parallel_scan.rs  partiql.rs  partiql_important_fixes.rs  proptest_tests.rs  query_scan.rs  serve_schema.rs  set_deduplication.rs  sqlcipher.rs  storage_backend_native.rs  storage_backend_trait_compile.rs  streams.rs  (+8 more)
tests/bridge/: http-bridge.test.mjs
tests/browser/: engine.browser.spec.js
(+3 files in other folders)
